--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+STRAVA_CLIENT_ID=
+STRAVA_CLIENT_SECRET=
+STRAVA_ACCESS_TOKEN=
+STRAVA_TOKEN_REFRESH=
+STRAVA_15_MIN_LIMIT=100
+STRAVA_DAILY_LIMIT=1000
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
